# taskwarriormacgui

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: api.md  architecture.md  implementation-plan.md  taskwarrior-integration.md  ui-design.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  taskwarrior.rs
src-tauri/src/commands/: mod.rs
src/lib/: notifications.ts
src/lib/components/: AddTask.svelte  KanbanView.svelte  PomodoroTimer.svelte  ProgressBar.svelte  ProjectFilter.svelte  SearchBar.svelte  Settings.svelte  StatusBar.svelte  TaskItem.svelte  TaskList.svelte  TitleBar.svelte
src/lib/stores/: projects.ts  settings.ts  tasks.ts
src/lib/types/: task.ts
src/routes/: +page.svelte
src/routes/settings/: +page.svelte
